--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <body>
         <div class="bzContainer d-flex">
             <div class="contactsContainer d-flex flex-column">
-                <div class="usernameContainer d-flex justify-content-between align-items-center p-2">
+                <div class="usernameContainer d-flex justify-content-between align-items-center p-3">
                     <div class="userInfo d-flex align-items-center gap-3">
                         <div class="imgContainer"><img class="img-fluid" src="img/avatar_io.jpg" alt="avatar_io"></div>
                         <div class="user">Nome Utente</div>
@@ -66,7 +66,25 @@
                     </ul>
                 </div>
             </div>
-            <div class="chats"></div>
+            <div class="chatsContainer">
+                <header class=" d-flex justify-content-between align-items-center p-3">
+                    <div class="chatLeft d-flex gap-2">
+                        <div class="imgContainer"><img class="img-fluid" src="img/avatar_io.jpg" alt="avatar_io"></div>
+                        <div>
+                            <div class="user">Michele</div>
+                            <div class="lastAccess">
+                                <span>Ultimo accesso oggi alle </span>
+                                <span>10/01/2020 16:15:22</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="chatRight d-flex gap-3">
+                        <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+                        <a href="#"><i class="fa-solid fa-paperclip"></i></a>
+                        <a href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
+                    </div>
+                </header>
+            </div>
         </div>
     </body>
 </html>
