--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                     </ul>
                 </div>
             </div>
-            <div class="chatsContainer">
+            <div class="chatsContainer d-flex flex-column">
                 <header class=" d-flex justify-content-between align-items-center p-3">
-                    <div class="chatLeft d-flex gap-2">
+                    <div class="chatTopLeft d-flex gap-2">
                         <div class="imgContainer"><img class="img-fluid" src="img/avatar_io.jpg" alt="avatar_io"></div>
                         <div>
                             <div class="user">Michele</div>
@@ -78,12 +78,75 @@
                             </div>
                         </div>
                     </div>
-                    <div class="chatRight d-flex gap-3">
+                    <div class="chatTopRight d-flex gap-3">
                         <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
                         <a href="#"><i class="fa-solid fa-paperclip"></i></a>
                         <a href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
                     </div>
                 </header>
+                <main class="p-3">
+                    <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi praesentium odio, earum debitis consectetur soluta rerum quia voluptates incidunt obcaecati dolores. In repudiandae repellat, voluptatibus autem aut sit eligendi possimus.
+                    Ipsum, repellat quam nesciunt sequi eos itaque vitae, tenetur ipsam iste impedit maiores! Numquam cum quibusdam sequi minus deserunt nihil vitae et similique, ad autem molestiae expedita doloribus nostrum possimus.
+                    Molestiae, itaque dolorum ipsum culpa, distinctio vel dolores, pariatur obcaecati dicta ullam nam tempora dolor natus excepturi neque ea fugiat vero ratione facere. Totam nam eveniet nisi distinctio eum ex.
+                    Quis beatae possimus numquam? Aut dolorum ad eos temporibus tempore dolor ipsam odio nesciunt voluptatibus quod delectus at officia sint eius, ea, consequatur cum. Harum dignissimos delectus quod error ratione.
+                    Itaque, corrupti! Consequuntur, deleniti molestias quo quis debitis ad doloribus facere repudiandae fugit atque illum obcaecati nisi quod magnam! Error, corporis dolore nihil tenetur quis similique incidunt earum accusamus. Voluptatem.
+                    Ex asperiores facere similique deserunt tempora nesciunt, vitae ea repudiandae fugiat dolorem nostrum maiores voluptatibus dolorum necessitatibus excepturi molestiae aliquam, explicabo voluptatem. Incidunt, quaerat dolor. Assumenda aliquid maxime molestias sapiente.
+                    Tempore sequi soluta omnis recusandae culpa, ut facere aliquid unde aperiam mollitia, architecto officiis laborum quasi dolores assumenda, placeat quam est consequatur iure asperiores ducimus nemo blanditiis ea? Deserunt, labore.
+                    Necessitatibus veniam neque cupiditate dolores sapiente velit laudantium harum inventore soluta distinctio similique esse nobis quia voluptatibus saepe, sed aliquam? Magni nemo nostrum architecto quidem porro natus, adipisci aliquam accusantium.
+                    Magnam dolor dolore debitis hic voluptates illo non expedita eius. Obcaecati vitae tempore eius nostrum itaque totam ex laborum iste pariatur sed praesentium esse, blanditiis libero quasi iusto error? Voluptatem?
+                    Nisi odio alias atque quasi nesciunt modi, aperiam eveniet, dolorem deleniti suscipit velit vitae? Magnam inventore laboriosam praesentium in, autem excepturi corrupti! Quo, quisquam voluptatum. Nulla similique voluptatem ratione maiores.
+                    Itaque quo blanditiis cumque voluptas? Iure, quod vel voluptas debitis illum reiciendis! Aut excepturi qui veritatis, perspiciatis deserunt, eius quod facere alias, ipsum illum quo laborum magnam perferendis quae magni!
+                    Deleniti recusandae eius asperiores libero nesciunt molestiae corrupti, quia ut molestias, hic ex ab sint esse, perspiciatis voluptatum ipsum officia aut consequatur. Vitae maxime doloremque voluptate cum impedit architecto laudantium.
+                    Eveniet, voluptates temporibus. Ratione odit voluptate iste facere similique consequatur perspiciatis nulla magnam ullam saepe rem consectetur sed quisquam optio magni, repellat unde explicabo eveniet porro harum corporis libero sint!
+                    Ullam, odio, rem alias ad quaerat maxime repellat autem quia obcaecati ratione aut illum! Perferendis voluptate distinctio tempore autem explicabo cum possimus sit quam praesentium, provident odio laudantium temporibus minus!
+                    Voluptas soluta nam consequuntur. Odit, itaque! Tempora, fugiat repellat, enim beatae et doloremque alias illum quo, error quis sequi quas soluta nihil illo! Adipisci praesentium architecto voluptatem optio delectus aspernatur.
+                    Itaque nobis omnis vel doloribus sint totam, consectetur in quos optio modi provident et ipsa, vero, libero possimus ad obcaecati ex? Facere aspernatur dolorem error? Sequi officiis nisi reprehenderit voluptate.
+                    Placeat unde sed enim animi mollitia minus, cupiditate pariatur aspernatur. Qui, enim nesciunt? Amet inventore consequatur harum corrupti obcaecati error quis, eos, omnis sapiente unde quidem numquam soluta culpa itaque.
+                    Voluptatibus quia vero doloremque laboriosam facilis at laborum accusantium! Alias commodi eligendi expedita sapiente, nostrum labore iusto dignissimos autem minima distinctio eveniet, quo excepturi aliquid sed error obcaecati totam ipsa?
+                    Eum ut, suscipit nobis velit magni nulla facilis atque culpa voluptatibus amet, maiores tempore natus odit quasi reiciendis reprehenderit minima eligendi sequi error, est cum odio aspernatur? Veniam, cumque perspiciatis?
+                    Similique dolor quidem quis temporibus maxime dolorem, at corporis quas assumenda rerum. Impedit neque, magni perspiciatis ducimus et fugiat. Molestiae dignissimos voluptate deleniti similique eveniet! Atque totam quis dicta eligendi.
+                    Dolor quidem placeat, nesciunt assumenda beatae non, eum eligendi similique animi molestiae quia culpa in illo earum porro, architecto maiores distinctio quasi totam quisquam laudantium doloribus? Obcaecati possimus fugit illum.
+                    Nisi, iure. Illum ab culpa libero voluptatem blanditiis? Corrupti laborum reprehenderit placeat expedita nulla doloremque aspernatur doloribus quis facilis fugit eligendi esse quisquam, sapiente magni totam repellat ducimus dolore iusto.
+                    Asperiores, accusantium a, iusto aliquid neque nostrum ipsa quisquam placeat deleniti eveniet ratione facilis nihil hic illo! Maxime iure labore est dicta? Quasi debitis asperiores modi repellat odit iure vel?
+                    Exercitationem quia, sapiente facilis fugit ut soluta magni tenetur corporis nisi doloribus enim excepturi aut sequi nobis, ex illum autem obcaecati unde. Impedit quod voluptatibus ducimus nulla fugit asperiores repellat.
+                    Ipsa quod est optio aperiam beatae quibusdam, ullam voluptas illum expedita repellat ad maxime magni dolore saepe. Exercitationem necessitatibus cumque error, sunt voluptatum reiciendis iure numquam maiores quae deserunt unde.
+                    Pariatur sequi corrupti sapiente harum blanditiis cupiditate ea? Nisi eveniet ducimus repudiandae vitae, praesentium voluptatem, perspiciatis ipsa fugiat atque sunt, temporibus illum. Quos, ipsum sunt asperiores esse nam quibusdam cupiditate?
+                    Eaque nihil aliquam a unde iure sit numquam placeat molestias earum, ducimus assumenda, maxime, eius explicabo natus odit minima quidem ipsa. Id unde dolores quia ab officiis blanditiis minima corporis!
+                    Saepe possimus excepturi debitis, quisquam ullam aliquam itaque eaque error est obcaecati ratione mollitia modi quas architecto atque perspiciatis. Laborum dolore aut facilis neque est autem tempora iusto laboriosam necessitatibus?
+                    Commodi odio in officiis ducimus quod debitis magnam esse laudantium amet. Est error sint ipsum maxime, optio doloribus consequuntur non, ex expedita neque dolores! Accusamus odio optio voluptates quod tenetur!
+                    Repudiandae cum reiciendis dicta, nemo, cupiditate aliquid a excepturi facere enim molestiae saepe quae maxime dolorum quaerat dolores corporis veritatis exercitationem officia natus iste at, suscipit magni! Saepe, eum praesentium!
+                    Cumque quas, incidunt impedit quaerat est explicabo nostrum doloribus voluptatum voluptatibus nesciunt ratione tempore numquam sequi dicta exercitationem nisi quae cum expedita distinctio blanditiis repudiandae fuga officia. Iure, quibusdam asperiores.
+                    Laudantium tempora obcaecati, labore nesciunt ipsam in nulla dolorum deleniti possimus. Provident unde commodi incidunt eius voluptatem ipsam impedit. Dignissimos voluptatem minus deleniti, illum dolor tempora. Doloremque eum mollitia culpa.
+                    Ex harum facilis tempore tempora distinctio molestiae nihil ratione quis sit praesentium! Sint, dicta vero. Similique doloribus omnis necessitatibus excepturi esse, commodi odit, quasi modi vero quae repellendus! Optio, velit!
+                    Quam consequatur incidunt dicta commodi accusamus similique libero a. Amet totam minima doloribus reiciendis itaque impedit inventore vitae tenetur quaerat voluptas perferendis fugit architecto officia numquam laudantium, asperiores ullam enim?
+                    Vero nisi est aut! In earum corrupti aliquid exercitationem modi mollitia numquam velit, explicabo harum aut iure inventore culpa voluptates cumque? Vitae iste nisi ex magnam assumenda hic provident laborum?
+                    Cupiditate explicabo corrupti earum expedita minus maiores deleniti itaque neque deserunt porro? Amet ad distinctio inventore dignissimos placeat, repellat, deleniti architecto deserunt maxime fugiat ipsam non id. Aspernatur, amet quis.
+                    Laborum et optio voluptatem? Modi voluptate officia, distinctio soluta ad delectus ducimus culpa ab consequatur accusamus enim nulla quaerat atque quia quas assumenda ea suscipit facilis odio consectetur ratione dicta.
+                    Delectus earum, non qui alias magni veniam et optio suscipit. Velit iste amet fugit quae commodi eveniet. Eius numquam suscipit, ut facere nobis labore soluta porro aperiam doloribus, corporis vitae?
+                    Voluptas aliquam magni vero repudiandae, eos nostrum id, nemo aliquid veniam iste reprehenderit velit voluptates modi, quae a deleniti saepe. Quisquam voluptatem eos quis porro quo eaque maiores amet eligendi!
+                    Dolores facere libero est saepe cupiditate, esse accusantium perferendis exercitationem in pariatur ratione corrupti nulla ad deserunt! Dolores odio quod ad dicta libero voluptas. Debitis doloribus alias libero expedita esse.
+                    Aut cumque consequuntur, ab non at necessitatibus molestias ea vitae, quod nulla amet maiores saepe, laudantium nobis? Suscipit, labore reiciendis nihil, repellendus unde fugit, magni laborum nostrum autem expedita numquam.
+                    Architecto, in eum? Qui commodi, fugit autem quos aliquid quo expedita iure, totam quod ex magnam voluptatem illo quisquam rem nisi illum laborum mollitia doloremque explicabo dolorem quae, assumenda harum.
+                    Ea assumenda dolore saepe at quaerat! Eos numquam qui, natus, earum sapiente fuga, error similique amet ea voluptas repudiandae. Similique illum perspiciatis vitae nostrum quasi accusamus! Et, quasi soluta. Voluptas!
+                    Suscipit, itaque optio similique dolorum eius in delectus adipisci aut magnam beatae placeat impedit a id reprehenderit cumque? Quas placeat pariatur sapiente in deleniti porro earum a eum ipsum fugiat?
+                    Nihil, quaerat reiciendis? Quibusdam quasi eos nulla libero, deleniti fugit, laboriosam aut id minima in, incidunt sequi nemo molestiae? Aperiam id iure quia dignissimos impedit illum, esse porro corporis non?
+                    Rem quo perferendis esse quas, sapiente quasi excepturi. Beatae, laborum unde. Nesciunt ipsam, ad nostrum beatae dolorum autem libero tempore, magni necessitatibus ipsa perferendis iure incidunt dolorem ex numquam eaque.
+                    Molestias veniam libero quibusdam nesciunt debitis fugit, quo soluta praesentium rerum dolores minus repellendus! Debitis voluptate odit eveniet explicabo blanditiis porro accusantium possimus? Commodi quibusdam officia pariatur beatae alias! Atque?
+                    Quod aut a placeat ipsa! Ducimus tenetur ipsum eius aut, ullam esse odio quo reiciendis at minus sunt error, sapiente, labore animi ratione ea numquam consectetur quidem earum dolorem nisi.
+                    Odio dignissimos atque est quibusdam mollitia odit illum necessitatibus. Delectus vitae debitis, temporibus, iure porro fugit expedita rerum et dolorem id natus, quae consequatur ab corporis culpa. Eveniet, suscipit quos!
+                    Laborum, pariatur earum nulla fugit praesentium culpa doloremque saepe nisi magnam tenetur soluta quo, impedit nemo totam itaque dolores quasi! Accusantium accusamus enim dolores eos a fugiat temporibus blanditiis impedit!</span>
+                </main>
+                <footer class="d-flex align-items-center gap-3 py-2 px-3">
+                    <div class="chatBottomLeft">
+                        <a href="#"><i class="fa-regular fa-face-smile"></i></a>
+                    </div>
+                    <div class="chatBottomMiddle flex-grow-1">
+                        <input type="email" class="form-control" placeholder="Scrivi un messaggio">
+                    </div>
+                    <div class="chatBottomRight">
+                        <a href="#"><i class="fa-solid fa-microphone"></i></a>
+                    </div>
+                </footer>
             </div>
         </div>
     </body>
