--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
         <script defer src="js/script.js"></script>
     </head>
     <body>
-        <div class="bzContainer d-flex">
+        <div id="root" class="bzContainer d-flex">
             <div class="contactsContainer d-flex flex-column">
                 <div class="usernameContainer d-flex justify-content-between align-items-center p-3">
                     <div class="userInfo d-flex align-items-center gap-3">
-                        <div class="imgContainer"><img class="img-fluid" src="img/avatar_io.jpg" alt="avatar_io"></div>
-                        <div class="user">Nome Utente</div>
+                        <div class="imgContainer">
+                            <img class="img-fluid" :src='"img/avatar" + user.avatar + ".jpg"' :alt="user.name">
+                        </div>
+                        <div class="user"> {{ user.name }} </div>
                     </div>
                     <div class="userNav d-flex gap-3">
                         <a href="#"><i class="fa-solid fa-circle-notch"></i></a>
@@ -50,17 +52,19 @@
                 </div>
                 <div class="contacts p-2">
                     <ul class="m-0 p-0">
-                        <li class="d-flex">
+                        <li class="d-flex"
+                        v-for="contact in contacts">
                             <div class="contactLeft p-2">
-                                <div class="imgContainer"><img class="img-fluid" src="img/avatar_io.jpg" alt="avatar_io"></div>
+                                <div class="imgContainer"><img class="img-fluid"
+                                    :src='"img/avatar" + contact.avatar + ".jpg"' :alt="contact.name">
+                                </div>
                             </div>
                             <div class="contactMiddle p-2">
-                                <div class="user">Michele</div>
-                                <div class="lastMsg">Ultimo messaggio</div>
+                                <div class="user"> {{ contact.name }} </div>
+                                <div class="lastMsg"> {{ contact.messages[contact.messages.length - 1].message }} </div>
                             </div>
                             <div class="contactRight p-2 text-end">
-                                <div class="lastDate">10/01/2020</div>
-                                <div class="lastHour">16:15:22</div>
+                                <div class="lastDate"> {{ contact.messages[contact.messages.length - 1].date }} </div>
                             </div>
                         </li>
                     </ul>
@@ -87,10 +91,11 @@
                 <main class="p-5">
                     <ul class="list-unstyled">
                         <li>
-                            <div class="message sent">Lorem </div>
+                            <div class="message sent"> Lorem </div>
                         </li>
-                        <li>
-                            <div class="message received">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur, amet. Assumenda maxime modi sunt, inventore ad iste earum temporibus neque excepturi sed vitae dolor, dolorem tenetur atque voluptate dolorum nemo?</div>
+                        <li v-for="contact in contacts">
+                            <div v-for="msg in contact.messages"
+                            class="message" :class="msg.status === 'sent' ? 'sent' : 'received'"> {{ msg.message }} </div>
                         </li>
                     </ul>
                 </main>
