--- a/index.html
+++ b/index.html
@@ -71,14 +71,18 @@
                 </div>
             </div>
             <div class="chatsContainer d-flex flex-column">
-                <header class=" d-flex justify-content-between align-items-center p-3">
-                    <div class="chatTopLeft d-flex gap-2">
-                        <div class="imgContainer"><img class="img-fluid" src="img/avatar_io.jpg" alt="avatar_io"></div>
-                        <div>
-                            <div class="user">Michele</div>
-                            <div class="lastAccess">
-                                <span>Ultimo accesso oggi alle </span>
-                                <span>10/01/2020 16:15:22</span>
+                <header class="d-flex justify-content-between align-items-center p-3">
+                    <div class="chatTopLeft d-flex justify-content-between align-items-center p-3">
+                        <div v-for="contact in contacts" class="activeChat">
+                            <div v-if="contact.visible" class="d-flex gap-2">
+                                <div class="imgContainer"><img class="img-fluid" :src='"img/avatar" + contact.avatar + ".jpg"' :alt="contact.name"></div>
+                                <div>
+                                    <div class="user"> {{ contact.name }} </div>
+                                    <div class="lastAccess">
+                                        <span> Ultimo accesso oggi alle </span>
+                                        <span> 456456464 </span>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -101,7 +105,8 @@
                         <a href="#"><i class="fa-regular fa-face-smile"></i></a>
                     </div>
                     <div class="chatBottomMiddle flex-grow-1">
-                        <input type="email" class="form-control" placeholder="Scrivi un messaggio">
+                        <input type="email" class="form-control" placeholder="Scrivi un messaggio"
+                        v-model="newMessage" @keyup.enter="sendMsg">
                     </div>
                     <div class="chatBottomRight">
                         <a href="#"><i class="fa-solid fa-microphone"></i></a>
