--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </div>
             </div>
             <div class="chatsContainer d-flex flex-column">
-                <header class="d-flex justify-content-between align-items-center p-3">
+                <header class="d-flex justify-content-between align-items-center px-3">
                     <div class="chatTopLeft d-flex justify-content-between align-items-center p-3">
                         <div v-for="contact in contacts" class="activeChat">
                             <div v-if="contact.visible" class="d-flex gap-2">
@@ -81,7 +81,7 @@
                                     <div class="user"> {{ contact.name }} </div>
                                     <div class="lastAccess">
                                         <span> Ultimo accesso oggi alle </span>
-                                        <span> 456456464 </span>
+                                        <span> {{ lastSeen }} </span>
                                     </div>
                                 </div>
                             </div>
@@ -97,7 +97,10 @@
                     <ul class="list-unstyled">
                         <li v-for="contact in contacts">
                             <div v-for="msg in contact.messages"  v-if="contact.visible"
-                            class="message" :class="msg.status === 'sent' ? 'sent' : 'received'"> {{ msg.message }} </div>
+                            class="message" :class="msg.status === 'sent' ? 'sent' : 'received'">
+                                <span class="msgText"> {{ msg.message }} </span>
+                                <span class="msgDate"> {{ shortDate(msg.date) }} </span>
+                            </div>
                         </li>
                     </ul>
                 </main>
@@ -110,7 +113,9 @@
                         v-model="newMessage" @keyup.enter="sendMsg">
                     </div>
                     <div class="chatBottomRight">
-                        <a href="#"><i class="fa-solid fa-microphone"></i></a>
+                        <a v-if="!writingMsg" href="#"><i class="fa-solid fa-microphone"></i></a>
+                        <button v-if="writingMsg" type="button" class="btn btn-send" @click="sendMsg">
+                            <i class="fa-solid fa-paper-plane"></i></button>
                     </div>
                 </footer>
             </div>
