--- a/index.html
+++ b/index.html
@@ -72,61 +72,66 @@
                     </ul>
                 </div>
             </div>
-            <div class="chatsContainer d-flex flex-column">
-                <header class="d-flex justify-content-between align-items-center px-3">
-                    <div class="chatTopLeft d-flex justify-content-between align-items-center p-3">
-                        <div v-for="contact in contacts" class="activeChat">
-                            <div v-if="contact.visible" class="d-flex gap-2">
-                                <div class="imgContainer"><img class="img-fluid" :src="renderPic(contact)" :alt="contact.name"></div>
-                                <div>
-                                    <div class="user"> {{ contact.name }} </div>
-                                    <div class="lastAccess">
-                                        <span> Ultimo accesso oggi alle </span>
-                                        <span> {{ lastSeen }} </span>
+            <div class="chatsContainer">
+                <div v-if="noneVisible" class="h-100">
+                    <div class="startingImage"><img class="img-fluid" src="img/startingImage.jpg" alt="startingImage"></div>
+                </div>
+                <div v-if="!noneVisible" class="d-flex flex-column h-100">
+                    <header class="d-flex justify-content-between align-items-center px-3">
+                        <div class="chatTopLeft d-flex justify-content-between align-items-center p-3">
+                            <div v-for="contact in contacts" class="activeChat">
+                                <div v-if="contact.visible" class="d-flex gap-2">
+                                    <div class="imgContainer"><img class="img-fluid" :src="renderPic(contact)" :alt="contact.name"></div>
+                                    <div>
+                                        <div class="user"> {{ contact.name }} </div>
+                                        <div class="lastAccess">
+                                            <span> Ultimo accesso oggi alle </span>
+                                            <span> {{ lastSeen }} </span>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="chatTopRight d-flex gap-3">
-                        <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
-                        <a href="#"><i class="fa-solid fa-paperclip"></i></a>
-                        <a href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
-                    </div>
-                </header>
-                <main class="p-5">
-                    <ul class="list-unstyled">
-                        <li v-for="contact in contacts">
-                            <div v-for="msg in contact.messages"  v-if="contact.visible"
-                            class="message d-flex justify-content-between" :class="msg.status">
-                                <div class="msgText"> {{ msg.message }} </div>
-                                <div class="msgTasks">
-                                    <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa-solid fa-chevron-down btn-delete"></i></button>
-                                    <ul class="dropdown-menu">
-                                        <li class="dropdown-item"><button class="btn">Message Info</button></li>
-                                        <li class="dropdown-item"><button class="btn" @click="deleteMsg(contact.id, msg.id)">Delete Message</button></li>
-                                    </ul>
+                        <div class="chatTopRight d-flex gap-3">
+                            <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+                            <a href="#"><i class="fa-solid fa-paperclip"></i></a>
+                            <a href="#"><i class="fa-solid fa-ellipsis-vertical"></i></a>
+                        </div>
+                    </header>
+                    <main class="p-5">
+                        <ul class="list-unstyled">
+                            <li v-for="contact in contacts">
+                                <div v-for="msg in contact.messages"  v-if="contact.visible"
+                                class="message d-flex justify-content-between" :class="msg.status">
+                                    <div class="msgText"> {{ msg.message }} </div>
+                                    <div class="msgTasks">
+                                        <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa-solid fa-chevron-down btn-delete"></i></button>
+                                        <ul class="dropdown-menu">
+                                            <li class="dropdown-item"><button class="btn">Message Info</button></li>
+                                            <li class="dropdown-item"><button class="btn" @click="deleteMsg(contact.id, msg.id)">Delete Message</button></li>
+                                        </ul>
 
-                                    <span class="msgDate"> {{ shortDate(msg.date) }} </span>
+                                        <span class="msgDate"> {{ shortDate(msg.date) }} </span>
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                    </ul>
-                </main>
-                <footer class="d-flex align-items-center gap-3 py-2 px-3">
-                    <div class="chatBottomLeft">
-                        <a href="#"><i class="fa-regular fa-face-smile"></i></a>
-                    </div>
-                    <div class="chatBottomMiddle flex-grow-1">
-                        <input type="email" class="form-control" placeholder="Scrivi un messaggio"
-                        v-model="newMessage" @keyup.enter="sendMsg">
-                    </div>
-                    <div class="chatBottomRight">
-                        <a v-if="!writingMsg" href="#"><i class="fa-solid fa-microphone"></i></a>
-                        <button v-if="writingMsg" type="button" class="btn btn-send" @click="sendMsg">
-                            <i class="fa-solid fa-paper-plane"></i></button>
-                    </div>
-                </footer>
+                            </li>
+                        </ul>
+                    </main>
+                    <footer class="d-flex align-items-center gap-3 py-2 px-3">
+                        <div class="chatBottomLeft">
+                            <a href="#"><i class="fa-regular fa-face-smile"></i></a>
+                        </div>
+                        <div class="chatBottomMiddle flex-grow-1">
+                            <input type="email" class="form-control" placeholder="Scrivi un messaggio"
+                            v-model="newMessage" @keyup.enter="sendMsg">
+                        </div>
+                        <div class="chatBottomRight">
+                            <a v-if="!writingMsg" href="#"><i class="fa-solid fa-microphone"></i></a>
+                            <button v-if="writingMsg" type="button" class="btn btn-send" @click="sendMsg">
+                                <i class="fa-solid fa-paper-plane"></i></button>
+                        </div>
+                    </footer>
+                </div>
             </div>
         </div>
     </body>
