--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
                 </div>
                 <div class="contacts p-2">
                     <ul class="m-0 p-0">
-                        <li class="d-flex"
-                        v-for="contact in filteredContacts" @click="changeChat(contact.id)">
+                        <li v-for="contact in filteredContacts" class="d-flex" @click="setCurrentId(contact.id)">
                             <div class="contactLeft p-2">
                                 <div class="imgContainer"><img class="img-fluid"
                                     :src="renderPic(contact)" :alt="contact.name">
@@ -73,21 +72,19 @@
                 </div>
             </div>
             <div class="chatsContainer">
-                <div v-if="noneVisible" class="h-100">
+                <div v-if="notVisible" class="h-100">
                     <div class="startingImage"><img class="img-fluid" src="img/startingImage.jpg" alt="startingImage"></div>
                 </div>
-                <div v-if="!noneVisible" class="d-flex flex-column h-100">
+                <div v-if="!notVisible" class="d-flex flex-column h-100">
                     <header class="d-flex justify-content-between align-items-center px-3">
                         <div class="chatTopLeft d-flex justify-content-between align-items-center p-3">
-                            <div v-for="contact in contacts" class="activeChat">
-                                <div v-if="contact.visible" class="d-flex gap-2">
-                                    <div class="imgContainer"><img class="img-fluid" :src="renderPic(contact)" :alt="contact.name"></div>
-                                    <div>
-                                        <div class="user"> {{ contact.name }} </div>
-                                        <div class="lastAccess">
-                                            <span> Ultimo accesso oggi alle </span>
-                                            <span> {{ lastSeen }} </span>
-                                        </div>
+                            <div class="d-flex gap-2">
+                                <div class="imgContainer"><img class="img-fluid" :src="renderPic(currentContact)" :alt="currentContact.name"></div>
+                                <div>
+                                    <div class="user"> {{ currentContact.name }} </div>
+                                    <div class="lastAccess">
+                                        <span> Ultimo accesso oggi alle </span>
+                                        <span> {{ lastSeen(currentContact) }} </span>
                                     </div>
                                 </div>
                             </div>
@@ -100,18 +97,16 @@
                     </header>
                     <main class="p-5">
                         <ul class="list-unstyled">
-                            <li v-for="contact in contacts">
-                                <div v-for="msg in contact.messages"  v-if="contact.visible"
-                                class="message d-flex justify-content-between" :class="msg.status">
+                            <li v-for="msg in currentContact.messages">
+                                <div class="message d-flex justify-content-between" :class="msg.status">
                                     <div class="msgText"> {{ msg.message }} </div>
                                     <div class="msgTasks">
                                         <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa-solid fa-chevron-down btn-delete"></i></button>
                                         <ul class="dropdown-menu">
                                             <li class="dropdown-item"><button class="btn">Message Info</button></li>
-                                            <li class="dropdown-item"><button class="btn" @click="deleteMsg(contact.id, msg.id)">Delete Message</button></li>
+                                            <li class="dropdown-item"><button class="btn" @click="deleteMsg(currentContact.id, msg.id)">Delete Message</button></li>
                                         </ul>
-
-                                        <span class="msgDate"> {{ shortDate(msg.date) }} </span>
+                                        <span class="msgDate"> {{ shortDate(msg) }} </span>
                                     </div>
                                 </div>
                             </li>
